--- a/index.html
+++ b/index.html
@@ -1,42 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/styles.css">
-  <title>Document</title>
-</head>
-<body>
-  <header class="header container">
-    <div class="header__logo">
-      <a href="#!" class="header__logo-link">
-        <img src="./img/logo.svg" alt="logo">
-      </a>
-    </div>
-    <nav class="header__nav">
-      <ul class="header__list">
-        <li class="header__list-item">
-          <a href="#!" class="header__list-link header__list-link_active">Home</a>
-        </li>
-        <li class="header__list-item">
-          <a href="#!" class="header__list-link">Shop</a>
-        </li>
-        <li class="header__list-item">
-          <a href="#!" class="header__list-link">Plant Care</a>
-        </li>
-        <li class="header__list-item">
-          <a href="#!" class="header__list-link">Blogs</a>
-        </li>
-      </ul>
-    </nav>
-    <div class="header__buttons">
-      <button type="button" class="btn btn_small">
-        <img src="./img/Logout.svg" alt="Logout">
-        Login
-      </button>
-    </div>
-  </header>
-  <main>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>GreenShop</title>
+  </head>
+  <body>
+    <header class="header container">
+      <div class="header__logo">
+        <a href="#!" class="header__logo-link">
+          <img src="./img/logo.svg" alt="logo" />
+        </a>
+      </div>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <li class="header__list-item">
+            <a href="#!" class="header__list-link header__list-link_active"
+              >Home</a
+            >
+          </li>
+          <li class="header__list-item">
+            <a href="#!" class="header__list-link">Shop</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#!" class="header__list-link">Plant Care</a>
+          </li>
+          <li class="header__list-item">
+            <a href="#!" class="header__list-link">Blogs</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__buttons">
+        <button type="button" class="btn btn_small">
+          <img src="./img/Logout.svg" alt="Logout" />
+          Login
+        </button>
+      </div>
+    </header>
+    <main>
+      <section class="banner container">
+        <div class="banner__content">
+          <h2 class="banner__subtitle">Welcome to GreenShop</h2>
+          <h1 class="banner__title">Let’s Make a Better <span>Planet</span></h1>
+          <p class="banner__text">
+            We are an online plant shop offering a wide range of cheap and
+            trendy plants. Use our plants to create an unique Urban Jungle.
+            Order your favorite plants!
+          </p>
+          <button class="btn btn__medium">shop now</button>
+        </div>
+        <div class="banner__img">
+          <img src="./img/flowers.webp" alt="flowers" />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
