html layout markup v0.1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,76 @@
     <title>GreenShop</title>
   </head>
   <body>
-
+    <section class="flowers container">
+      <div class="flowers__categories">
+        <h1 class="flowers__title">Categories</h1>
+        <ul class="flowers__list">
+          <li class="flowers__list-item">
+            <a href="#!" class="flowers__list-link">
+              House Plants
+            </a>
+          </li>
+          <li class="flowers__list-item">
+            <a href="#!" class="flowers__list-link">
+              Potter Plants
+            </a>
+          </li>
+          <li class="flowers__list-item">
+            <a href="#!" class="flowers__list-link">
+              Seeds
+            </a>
+          </li>
+          <li class="flowers__list-item">
+            <a href="#!" class="flowers__list-link">
+              Small Plants
+            </a>
+          </li>
+          <li class="flowers__list-item">
+            <a href="#!" class="flowers__list-link">
+              Big Plants
+            </a>
+          </li>
+          <li class="flowers__list-item">
+            <a href="#!" class="flowers__list-link">
+              Succulents
+            </a>
+          </li>
+          <li class="flowers__list-item">
+            <a href="#!" class="flowers__list-link">
+              Trerrariums
+            </a>
+          </li>
+          <li class="flowers__list-item">
+            <a href="#!" class="flowers__list-link">
+              Gardening
+            </a>
+          </li>
+          <li class="flowers__list-item">
+            <a href="#!" class="flowers__list-link">
+              Accessories
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="flowers__header">
+        <ul class="flowers__header-list">
+          <li class="flowers__header-item">
+            <a href="" class="flowers__header-link">All Plants</a>
+          </li>
+          <li class="flowers__header-item">
+            <a href="" class="flowers__header-link">New Arrivals</a>
+          </li>
+          <li class="flowers__header-item">
+            <a href="" class="flowers__header-link">Sale</a>
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
-</html>
+</html
+
+
+
+
+
+
