html layout markup v0.2

--- a/index.html
+++ b/index.html
@@ -7,69 +7,125 @@
     <title>GreenShop</title>
   </head>
   <body>
-    <section class="flowers container">
-      <div class="flowers__categories">
-        <h1 class="flowers__title">Categories</h1>
-        <ul class="flowers__list">
-          <li class="flowers__list-item">
-            <a href="#!" class="flowers__list-link">
+    <section class="plants container">
+      <div class="plants__menu">
+        <nav class="plants__menu-nav">
+          <h1 class="plants__menu-title">Categories</h1>
+        <ul class="plants__menu-list">
+          <li class="plants__menu-item">
+            <a href="#!" class="plants__menu-link">
               House Plants
             </a>
           </li>
-          <li class="flowers__list-item">
-            <a href="#!" class="flowers__list-link">
+          <li class="plants__menu-item">
+            <a href="#!" class="plants__menu-link">
               Potter Plants
             </a>
           </li>
-          <li class="flowers__list-item">
-            <a href="#!" class="flowers__list-link">
+          <li class="plants__menu-item">
+            <a href="#!" class="plants__menu-link">
               Seeds
             </a>
           </li>
-          <li class="flowers__list-item">
-            <a href="#!" class="flowers__list-link">
+          <li class="plants__menu-item">
+            <a href="#!" class="plants__menu-link">
               Small Plants
             </a>
           </li>
-          <li class="flowers__list-item">
-            <a href="#!" class="flowers__list-link">
+          <li class="plants__menu-item">
+            <a href="#!" class="plants__menu-link">
               Big Plants
             </a>
           </li>
-          <li class="flowers__list-item">
-            <a href="#!" class="flowers__list-link">
+          <li class="plants__menu-item">
+            <a href="#!" class="plants__menu-link">
               Succulents
             </a>
           </li>
-          <li class="flowers__list-item">
-            <a href="#!" class="flowers__list-link">
+          <li class="plants__menu-item">
+            <a href="#!" class="plants__menu-link">
               Trerrariums
             </a>
           </li>
-          <li class="flowers__list-item">
-            <a href="#!" class="flowers__list-link">
+          <li class="plants__menu-item">
+            <a href="#!" class="plants__menu-link">
               Gardening
             </a>
           </li>
-          <li class="flowers__list-item">
-            <a href="#!" class="flowers__list-link">
+          <li class="plants__menu-item">
+            <a href="#!" class="plants__menu-link">
               Accessories
             </a>
           </li>
         </ul>
+        </nav>
+        <img src="./img/banner.png" alt="sale" class="plants__menu-banner">
       </div>
-      <div class="flowers__header">
-        <ul class="flowers__header-list">
-          <li class="flowers__header-item">
-            <a href="" class="flowers__header-link">All Plants</a>
-          </li>
-          <li class="flowers__header-item">
-            <a href="" class="flowers__header-link">New Arrivals</a>
-          </li>
-          <li class="flowers__header-item">
-            <a href="" class="flowers__header-link">Sale</a>
-          </li>
-        </ul>
+      <div class="plants__content">
+        <nav class="plants__nav">
+          <ul class="plants__nav-list">
+            <li class="plants__nav-item">
+              <a href="" class="plants__nav-link">All Plants</a>
+            </li>
+            <li class="plants__nav-item">
+              <a href="" class="plants__nav-link">New Arrivals</a>
+            </li>
+            <li class="plants__nav-item">
+              <a href="" class="plants__nav-link">Sale</a>
+            </li>
+          </ul>
+        </nav>
+        <p class="plants__content-text">Short by:</p>
+        <button>Default sorting
+          <img src="./img/arrow-down.svg" alt="">
+        </button>
+        <div class="plants__cards">
+          <div class="cards__item">
+            <img src="./img/flowers-1.png" alt="">
+            <h2 class="cards__title">Barberton Daisy</h2>
+            <a href="#!" class="cards__price">$119.00</a>
+          </div>
+          <div class="cards__item">
+            <img src="./img/flowers-2.png" alt="">
+            <h2 class="cards__title">Angel Wing Begonia</h2>
+            <a href="#!" class="cards__price">$169.00</a>
+          </div>
+          <div class="cards__item">
+            <img src="./img/flowers-3.png" alt="">
+            <h2 class="cards__title">African Violet</h2>
+            <a href="#!" class="cards__price">$199.00</a>
+          </div>
+          <div class="cards__item">
+            <img src="./img/flowers-4.png" alt="">
+            <h2 class="cards__title">Beach Spider Lily</h2>
+            <a href="#!" class="cards__price">$129.00</a>
+          </div>
+          <div class="cards__item">
+            <img src="./img/flowers-5.png" alt="">
+            <h2 class="cards__title">Blushing Bromeliad</h2>
+            <a href="#!" class="cards__price">$139.00</a>
+          </div>
+          <div class="cards__item">
+            <img src="./img/flowers-6.png" alt="">
+            <h2 class="cards__title">Aluminum Plant</h2>
+            <a href="#!" class="cards__price">$179.00</a>
+          </div>
+          <div class="cards__item">
+            <img src="./img/flowers-7.png" alt="">
+            <h2 class="cards__title">Bird's Nest Fern</h2>
+            <a href="#!" class="cards__price">$99.00</a>
+          </div>
+          <div class="cards__item">
+            <img src="./img/flowers-8.png" alt="">
+            <h2 class="cards__title">Broadleaf Lady Palm</h2>
+            <a href="#!" class="cards__price">$59.00</a>
+          </div>
+          <div class="cards__item">
+            <img src="./img/flowers-9.png" alt="">
+            <h2 class="cards__title">Chinese Evergreen</h2>
+            <a href="#!" class="cards__price">$39.00</a>
+          </div>
+        </div>
       </div>
     </section>
   </body>
