fix images and finished the layout

--- a/index.html
+++ b/index.html
@@ -62,23 +62,28 @@
         <img src="./img/banner.png" alt="sale" class="plants__menu-banner">
       </div>
       <div class="plants__content">
-        <nav class="plants__nav">
-          <ul class="plants__nav-list">
-            <li class="plants__nav-item">
-              <a href="" class="plants__nav-link">All Plants</a>
-            </li>
-            <li class="plants__nav-item">
-              <a href="" class="plants__nav-link">New Arrivals</a>
-            </li>
-            <li class="plants__nav-item">
-              <a href="" class="plants__nav-link">Sale</a>
-            </li>
-          </ul>
-        </nav>
-        <p class="plants__content-text">Short by:</p>
-        <button>Default sorting
-          <img src="./img/arrow-down.svg" alt="">
-        </button>
+        <div class="plants__header">
+          <nav class="plants__nav">
+            <ul class="plants__nav-list">
+              <li class="plants__nav-item">
+                <a href="#!" class="plants__nav-link plants__nav-link_active">All Plants</a>
+              </li>
+              <li class="plants__nav-item">
+                <a href="#!" class="plants__nav-link">New Arrivals</a>
+              </li>
+              <li class="plants__nav-item">
+                <a href="#!" class="plants__nav-link">Sale</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="plants__sorting">
+            <p>Short by:</p>
+            <a href="#!" class="plants__sorting-link">
+              Default sorting
+              <img src="./img/arrow-down.svg" alt="">
+            </a>
+          </div>
+        </div>
         <div class="plants__cards">
           <div class="cards__item">
             <img src="./img/flowers-1.png" alt="">
@@ -125,14 +130,18 @@
             <h2 class="cards__title">Chinese Evergreen</h2>
             <a href="#!" class="cards__price">$39.00</a>
           </div>
+          <div class="clear-fix"></div>
         </div>
+      </div>
+      <div class="plants__pages">
+        <a href="#!" class="pages__link pages__link_active">1</a>
+        <a href="#!" class="pages__link">2</a>
+        <a href="#!" class="pages__link">3</a>
+        <a href="#!" class="pages__link">4</a>
+        <a href="#!" class="pages__link">
+          <img src="./img/arrow-right.svg" alt="">
+        </a>
       </div>
     </section>
   </body>
 </html
-
-
-
-
-
-
