new markup and new styles

--- a/index.html
+++ b/index.html
@@ -7,141 +7,148 @@
     <title>GreenShop</title>
   </head>
   <body>
-    <section class="plants container">
-      <div class="plants__menu">
-        <nav class="plants__menu-nav">
-          <h1 class="plants__menu-title">Categories</h1>
-        <ul class="plants__menu-list">
-          <li class="plants__menu-item">
-            <a href="#!" class="plants__menu-link">
-              House Plants
-            </a>
+    <section class="shop container">
+      <aside class="sidebar">
+        <h3 class="sidebar__title">Categories</h3>
+        <ul class="menu-categories">
+          <li class="menu-categories__item">
+            <a href="" class="menu-categories__link">House Plants</a>
           </li>
-          <li class="plants__menu-item">
-            <a href="#!" class="plants__menu-link">
-              Potter Plants
-            </a>
+          <li class="menu-categories__item">
+            <a href="" class="menu-categories__link">Potter Plants</a>
           </li>
-          <li class="plants__menu-item">
-            <a href="#!" class="plants__menu-link">
-              Seeds
-            </a>
+          <li class="menu-categories__item">
+            <a href="" class="menu-categories__link">Seeds</a>
           </li>
-          <li class="plants__menu-item">
-            <a href="#!" class="plants__menu-link">
-              Small Plants
-            </a>
+          <li class="menu-categories__item">
+            <a href="" class="menu-categories__link">Small Plants</a>
           </li>
-          <li class="plants__menu-item">
-            <a href="#!" class="plants__menu-link">
-              Big Plants
-            </a>
+          <li class="menu-categories__item">
+            <a href="" class="menu-categories__link">Big Plants</a>
           </li>
-          <li class="plants__menu-item">
-            <a href="#!" class="plants__menu-link">
-              Succulents
-            </a>
+          <li class="menu-categories__item">
+            <a href="" class="menu-categories__link">Succulents</a>
           </li>
-          <li class="plants__menu-item">
-            <a href="#!" class="plants__menu-link">
-              Trerrariums
-            </a>
+          <li class="menu-categories__item">
+            <a href="" class="menu-categories__link">Trerrariums</a>
           </li>
-          <li class="plants__menu-item">
-            <a href="#!" class="plants__menu-link">
-              Gardening
-            </a>
+          <li class="menu-categories__item">
+            <a href="" class="menu-categories__link">Gardening</a>
           </li>
-          <li class="plants__menu-item">
-            <a href="#!" class="plants__menu-link">
-              Accessories
-            </a>
+          <li class="menu-categories__item">
+            <a href="" class="menu-categories__link">Accessories</a>
           </li>
         </ul>
-        </nav>
-        <img src="./img/banner.png" alt="sale" class="plants__menu-banner">
-      </div>
-      <div class="plants__content">
-        <div class="plants__header">
-          <nav class="plants__nav">
-            <ul class="plants__nav-list">
-              <li class="plants__nav-item">
-                <a href="#!" class="plants__nav-link plants__nav-link_active">All Plants</a>
-              </li>
-              <li class="plants__nav-item">
-                <a href="#!" class="plants__nav-link">New Arrivals</a>
-              </li>
-              <li class="plants__nav-item">
-                <a href="#!" class="plants__nav-link">Sale</a>
-              </li>
-            </ul>
+        <div class="sidebar__banner">
+          <img src="./img/banner.png" alt="banner">
+        </div>
+      </aside>
+      <div class="content">
+        <div class="filter">
+          <nav class="nav">
+            <a href="#!" class="nav__link nav__link_active">All Plants</a>
+            <a href="#!" class="nav__link">New Arrivals</a>
+            <a href="#!" class="nav__link">Sale</a>
           </nav>
-          <div class="plants__sorting">
-            <p>Short by:</p>
-            <a href="#!" class="plants__sorting-link">
-              Default sorting
-              <img src="./img/arrow-down.svg" alt="">
-            </a>
+          <div class="filter__drop-down drop-down">
+            <span>Short by:</span>
+            <button>Default sorting
+              <img src="./img/arrow-down.svg" alt="arrow-down">
+            </button>
           </div>
         </div>
-        <div class="plants__cards">
-          <div class="cards__item">
-            <img src="./img/flowers-1.png" alt="">
-            <h2 class="cards__title">Barberton Daisy</h2>
-            <a href="#!" class="cards__price">$119.00</a>
+        <div class="cards">
+          <div class="card">
+            <div class="card__image">
+              <img src="./img/flowers-1.png" alt="Barberton Daisy">
+            </div>
+            <h4 class="card__title">Barberton Daisy</h4>
+            <p class="card__price">$119.00</p>
           </div>
-          <div class="cards__item">
-            <img src="./img/flowers-2.png" alt="">
-            <h2 class="cards__title">Angel Wing Begonia</h2>
-            <a href="#!" class="cards__price">$169.00</a>
+          <div class="card">
+            <div class="card__image">
+              <img src="./img/flowers-2.png" alt="Angel Wing Begonia">
+            </div>
+            <h4 class="card__title">Angel Wing Begonia</h4>
+            <p class="card__price">$169.00</p>
           </div>
-          <div class="cards__item">
-            <img src="./img/flowers-3.png" alt="">
-            <h2 class="cards__title">African Violet</h2>
-            <a href="#!" class="cards__price">$199.00</a>
+          <div class="card">
+            <div class="card__image">
+              <img src="./img/flowers-3.png" alt="African Violet">
+            </div>
+            <h4 class="card__title">African Violet</h4>
+            <p class="card__price">$199.00</p>
           </div>
-          <div class="cards__item">
-            <img src="./img/flowers-4.png" alt="">
-            <h2 class="cards__title">Beach Spider Lily</h2>
-            <a href="#!" class="cards__price">$129.00</a>
+          <div class="card">
+            <div class="card__image">
+              <img src="./img/flowers-4.png" alt="Beach Spider Lily">
+            </div>
+            <h4 class="card__title">Beach Spider Lily</h4>
+            <p class="card__price">$129.00</p>
           </div>
-          <div class="cards__item">
-            <img src="./img/flowers-5.png" alt="">
-            <h2 class="cards__title">Blushing Bromeliad</h2>
-            <a href="#!" class="cards__price">$139.00</a>
+          <div class="card">
+            <div class="card__image">
+              <img src="./img/flowers-5.png" alt="Blushing Bromeliad">
+              </div>
+            <h4 class="card__title">Blushing Bromeliad</h4>
+            <p class="card__price">$139.00</p>
           </div>
-          <div class="cards__item">
-            <img src="./img/flowers-6.png" alt="">
-            <h2 class="cards__title">Aluminum Plant</h2>
-            <a href="#!" class="cards__price">$179.00</a>
+          <div class="card">
+            <div class="card__image">
+              <img src="./img/flowers-6.png" alt="Aluminum Plant">
+            </div>
+            <h4 class="card__title">Aluminum Plant</h4>
+            <p class="card__price">$179.00</p>
           </div>
-          <div class="cards__item">
-            <img src="./img/flowers-7.png" alt="">
-            <h2 class="cards__title">Bird's Nest Fern</h2>
-            <a href="#!" class="cards__price">$99.00</a>
+          <div class="card">
+            <div class="card__image">
+              <img src="./img/flowers-7.png" alt="Bird's Nest Fern">
+            </div>
+            <h4 class="card__title">Bird's Nest Fern</h4>
+            <p class="card__price">$99.00</p>
           </div>
-          <div class="cards__item">
-            <img src="./img/flowers-8.png" alt="">
-            <h2 class="cards__title">Broadleaf Lady Palm</h2>
-            <a href="#!" class="cards__price">$59.00</a>
+          <div class="card">
+            <div class="card__image">
+              <img src="./img/flowers-8.png" alt="Broadleaf Lady Palm">
+            </div>
+            <h4 class="card__title">Broadleaf Lady Palm</h4>
+            <p class="card__price">$59.00</p>
           </div>
-          <div class="cards__item">
-            <img src="./img/flowers-9.png" alt="">
-            <h2 class="cards__title">Chinese Evergreen</h2>
-            <a href="#!" class="cards__price">$39.00</a>
+          <div class="card">
+            <div class="card__image">
+              <img src="./img/flowers-9.png" alt="Chinese Evergreen">
+            </div>
+            <h4 class="card__title">Chinese Evergreen</h4>
+            <p class="card__price">$39.00</p>
           </div>
-          <div class="clear-fix"></div>
         </div>
       </div>
-      <div class="plants__pages">
-        <a href="#!" class="pages__link pages__link_active">1</a>
-        <a href="#!" class="pages__link">2</a>
-        <a href="#!" class="pages__link">3</a>
-        <a href="#!" class="pages__link">4</a>
-        <a href="#!" class="pages__link">
-          <img src="./img/arrow-right.svg" alt="">
-        </a>
+      <div class="pagination">
+        <nav class="pagination__nav">
+          <ul class="pagination__list">
+            <li class="pagination__item">
+              <a class="pagination__link" href="#!">1</a>
+            </li>
+            <li class="pagination__item">
+              <a class="pagination__link" href="#!">2</a>
+            </li>
+            <li class="pagination__item">
+              <a class="pagination__link" href="#!">3</a>
+            </li>
+            <li class="pagination__item">
+              <a class="pagination__link" href="#!">4</a>
+            </li>
+            <li class="pagination__item">
+              <a class="pagination__link" href="#!">
+                <img src="./img/arrow-right.svg" alt="arrow-right">
+              </a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </section>
   </body>
 </html
+
+
+
