finished with markup and styles, and added font formats

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </nav>
           <div class="filter__drop-down drop-down">
             <span>Short by:</span>
-            <button>Default sorting
+            <button type="button">Default sorting
               <img src="./img/arrow-down.svg" alt="arrow-down">
             </button>
           </div>
@@ -127,7 +127,7 @@
         <nav class="pagination__nav">
           <ul class="pagination__list">
             <li class="pagination__item">
-              <a class="pagination__link" href="#!">1</a>
+              <a class="pagination__link pagination__link_active" href="#!">1</a>
             </li>
             <li class="pagination__item">
               <a class="pagination__link" href="#!">2</a>
@@ -149,6 +149,3 @@
     </section>
   </body>
 </html
-
-
-
