popular plants section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Green shop</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Green shop</title>
+  </head>
+  <body>
+    <section class="popular-plants container">
+      <div class="popular-plants__item">
+        <div class="popular-plants__img">
+          <img
+            src="./img/plants-1.png"
+            alt="Summer cactus
+        & succulents"
+          />
+        </div>
+        <div class="popular-plants__content">
+          <h3 class="popular-plants__title">Summer cactus & succulents</h3>
+        <p class="popular-plants__text">
+          We are an online plant shop offering a wide range of cheap and trendy
+          plants
+        </p>
+        <button type="button" class="popular-plants__btn btn">
+          Find More
+          <img src="./img/Arrow-Right-white.svg" alt="" />
+        </button>
+        </div>
+      </div>
+      <div class="popular-plants__item">
+        <div class="popular-plants__img">
+          <img
+            src="./img/plants-2.png"
+            alt="Styling Trends
+      & much more"
+          />
+        </div>
+        <div class="popular-plants__content">
+        <h3 class="popular-plants__title">Styling Trends & much more</h3>
+        <p class="popular-plants__text">
+          We are an online plant shop offering a wide range of cheap and trendy
+          plants
+        </p>
+        <button type="button" class="popular-plants__btn btn">
+          Find More
+          <img src="./img/Arrow-Right-white.svg" alt="" />
+        </button>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
